--- a/services/index.html
+++ b/services/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <button class="swiper-slide">Ремонтируемые устройства</button>
+                    <button class="swiper-slide active">Ремонтируемые устройства</button>
                     <button class="swiper-slide">Дополнительные услуги</button>
                     <button class="swiper-slide">Цены на услуги</button>
                     <button class="swiper-slide">Адреса сервисных центров</button>
@@ -51,6 +51,22 @@
                     <button class="swiper-slide">Отзывы</button>
                 </div>
             </div>
+            <div class="main-content">
+                <div class="main-content__text">
+                    Мы являемся авторизованным сервисным центром по ремонту техники Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+                </div>
+                <div class="read-more">
+                    <div class="read-more__expand">
+                        <img src="img/readmore.svg" alt="expand">
+                    </div>
+                    <div class="read-more__text">
+                        Читать далее
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="image-company">
+            <img class="image-company__image" src="img/company.png" alt="company">
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
