--- a/services/index.html
+++ b/services/index.html
@@ -43,12 +43,12 @@
             </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
-                    <button class="swiper-slide active">Ремонтируемые устройства</button>
-                    <button class="swiper-slide">Дополнительные услуги</button>
-                    <button class="swiper-slide">Цены на услуги</button>
-                    <button class="swiper-slide">Адреса сервисных центров</button>
-                    <button class="swiper-slide">Специальные цены</button>
-                    <button class="swiper-slide">Отзывы</button>
+                    <button class="swiper-slide active" id="fstBtn">Ремонтируемые устройства</button>
+                    <button class="swiper-slide" id="sndBtn">Дополнительные услуги</button>
+                    <button class="swiper-slide" id="trdBtn">Цены на услуги</button>
+                    <button class="swiper-slide" id="fthBtn">Адреса сервисных центров</button>
+                    <button class="swiper-slide" id="ffthBtn">Специальные цены</button>
+                    <button class="swiper-slide" id="sthBtn">Отзывы</button>
                 </div>
             </div>
             <div class="main-content">
