bem style added

--- a/services/index.html
+++ b/services/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-<!--    <meta name="viewport" content="width=320">-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/TTLakes/stylesheet.css">
@@ -12,44 +11,44 @@
 <body>
     <header class="header-items">
         <div class="container">
-            <div class="header-items__container">
+            <div class="items-container">
                 <div class="first-block">
-                    <div class="header-items__item-container" id="item-burger">
-                        <div class="header-items__item-burger">
+                    <div class="items-container__background" id="item-burger">
+                        <div class="items-container__item-burger">
                             <img src="img/menu.svg" alt="burger">
                         </div>
                     </div>
-                    <div class="header-items__item-divider" id="divider1"></div>
-                    <div class="header-items__item-logo" id="item-logo">
+                    <div class="items-container__item-divider" id="divider1"></div>
+                    <div class="items-container__item-logo" id="item-logo">
                         <img src="img/logo.svg" alt="logo">
                     </div>
                 </div>
                 <div class="second-block">
-                    <div class="header-items__item-container" id="item-call">
-                        <div class="header-items__item-call">
+                    <div class="items-container__background" id="item-call">
+                        <div class="items-container__item-call">
                             <img src="img/call.svg" alt="">
                         </div>
                     </div>
-                    <div class="header-items__item-container" id="item-chat">
-                        <div class="header-items__item-chat">
+                    <div class="items-container__background" id="item-chat">
+                        <div class="items-container__item-chat">
                             <img src="img/chat.svg" alt="">
                         </div>
                     </div>
-                    <div class="header-items__item-container" id="item-profile">
-                        <div class="header-items__item-profile">
+                    <div class="items-container__background" id="item-profile">
+                        <div class="items-container__item-profile">
                             <img src="img/profile.svg" alt="">
                         </div>
                     </div>
-                    <div class="header-items__item-divider" id="divider2"></div>
-                    <div class="repair-text">Оставить заявку</div>
-                    <div class="header-items__item-container"  id="item-repair">
-                        <div class="header-items__item-repair">
+                    <div class="items-container__item-divider" id="divider2"></div>
+                    <div class="items-container__repair-text">Оставить заявку</div>
+                    <div class="items-container__background"  id="item-repair">
+                        <div class="items-container__item-repair">
                             <img src="img/settings.svg" alt="repair">
                         </div>
                     </div>
-                    <div class="status-text">Статус ремонта</div>
-                    <div class="header-items__item-container" id="item-status">
-                        <div class="header-items__item-status">
+                    <div class="items-container__status-text">Статус ремонта</div>
+                    <div class="items-container__background" id="item-status">
+                        <div class="items-container__item-status">
                             <img src="img/search.svg" alt="status">
                         </div>
                     </div>
@@ -59,9 +58,9 @@
     <div class="shadow-line"></div>
     </header>
     <main class="main">
-        <div class="main__title-highlight"></div>
+        <div class="title-highlight"></div>
         <div class="container">
-            <div class="main__title-text">
+            <div class="title-text">
                 <h1>Услуги и сервисы</h1>
             </div>
             <div class="swiper-container">
@@ -76,7 +75,7 @@
             </div>
             <div class="main-content">
                 <div class="text-block">
-                    <div class="main-content__text">
+                    <div class="text-block__text">
                         Мы являемся авторизованным сервисным центром по ремонту техники Dell.
                         Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.<br><br>
                         Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает
@@ -93,8 +92,8 @@
                     </div>
                 </div>
                 <div class="image-block">
-                    <div class="image-company">
-                        <img class="image-company__image" src="img/company.png" alt="company">
+                    <div class="image-container">
+                        <img class="image-container__image" src="img/company.png" alt="company">
                     </div>
                 </div>
             </div>
