--- a/services/index.html
+++ b/services/index.html
@@ -92,8 +92,8 @@
                     </div>
                 </div>
                 <div class="image-block">
-                    <div class="image-container">
-                        <img class="image-container__image" src="img/company.png" alt="company">
+                    <div class="image-block__container">
+                        <img class="image-block__image" src="img/company.png" alt="company">
                     </div>
                 </div>
             </div>
